<resources>
    <string name="app_name">fianceIntroduction</string>
     //income
    <string name="incometext">Gain Total Control Of Your Money</string>
    <string name="incometext2">Become your own money manager and Improve your personal finances</string>
    <string name="incomebtn">Next</string>
    <string name="incomebtn2">Back</string>
    <string name="incomeimg">incomeimage</string>

    //expense
    <string name="expensetext">Know where your  money goes</string>
    <string name="expense_img">expenseimage</string>
    <string name="expense_text2">Get an idea about your own expenses and be more financially organized</string>
    <string name="expense_btntext">Next</string>
    <string name="exp_img">expense_image</string>

    //goal
    <string name="goaltext">Set goals</string>
    <string name="goaltext2">Set financial goals and take the first step to achieving your dreams</string>
    <string name="goalbtn">Next</string>
    <string name="goalbtn2">Back</string>
    <string name="goalimg">goalimage</string>

    //bill manager
    <string name="billtext">Manage bill payments</string>
    <string name="billtext2">Add important future bill payments to the app, and never forget to miss bill payments again</string>
    <string name="billbtn">Start</string>
    <string name="billbtn2">Back</string>
    <string name="billimg">billimage</string>
</resources>