<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="vertical"
    tools:context=".intro_income">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/goal_text"
            android:layout_width="409dp"
            android:layout_height="59dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/goaltext"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="411dp"
            android:layout_height="296dp"
            android:contentDescription="@string/incomeimg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_text"
            app:layout_constraintVertical_bias="0.146"
            app:srcCompat="@drawable/goal_pic" />

        <TextView
            android:id="@+id/goaltext"
            android:layout_width="342dp"
            android:layout_height="69dp"
            android:layout_marginTop="56dp"
            android:text="@string/goaltext2"
            android:textAlignment="center"
            android:textColor="#073B80"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/goalbtn"
            android:layout_width="@dimen/first_button_width"
            android:layout_height="@dimen/first_button_height"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button1"
            android:text="@string/goalbtn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goalbtn2" />

        <Button
            android:id="@+id/goalbtn2"
            android:layout_width="@dimen/first_button_width"
            android:layout_height="@dimen/first_button_height"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button1"
            android:text="@string/goalbtn2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goalbtn"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>