<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="vertical"
    tools:context=".intro_income">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/income_text"
            android:layout_width="353dp"
            android:layout_height="104dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/incometext"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="412dp"
            android:layout_height="302dp"
            android:contentDescription="@string/incomeimg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/income_text"
            app:layout_constraintVertical_bias="0.027"
            app:srcCompat="@drawable/incomepic" />

        <TextView
            android:id="@+id/incometext2"
            android:layout_width="348dp"
            android:layout_height="104dp"
            android:layout_marginTop="8dp"
            android:text="@string/incometext2"
            android:textAlignment="center"
            android:textColor="#073B80"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/incomebtn"
            android:layout_width="@dimen/first_button_width"
            android:layout_height="@dimen/first_button_height"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button1"
            android:text="@string/incomebtn"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.907"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/incomebtn2"
            android:layout_width="@dimen/first_button_width"
            android:layout_height="@dimen/first_button_height"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button1"
            android:text="@string/incomebtn2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.131"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>