<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1"
    android:orientation="vertical"
    tools:context=".intro_expense">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView

            android:id="@+id/expense_text"
            android:layout_width="360dp"
            android:layout_height="119dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="sans-serif"
            android:text="@string/expensetext"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132" />

        <TextView

            android:id="@+id/expense_text2"
            android:layout_width="359dp"
            android:layout_height="57dp"
            android:layout_marginBottom="64dp"
            android:text="@string/expense_text2"
            android:textAlignment="center"
            android:textColor="#073B80"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/expense_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button

            android:id="@+id/expense_btn"
            android:layout_width="@dimen/first_button_width"
            android:layout_height="@dimen/first_button_height"
            android:layout_marginBottom="92dp"
            android:background="@drawable/button1"
            android:text="@string/expense_btntext"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="412dp"
            android:layout_height="281dp"
            android:contentDescription="@string/exp_img"
            app:layout_constraintBottom_toTopOf="@+id/expense_text2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expense_text"
            app:layout_constraintVertical_bias="0.333"
            app:srcCompat="@drawable/expensepic" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>